src/views/Chat/styles/style.css
/* ... */
#contacts > div {
  overflow-y: auto;
  overflow-x: hidden;
}
#contacts > div > div > div > div.card-text > main > div > div > h3 {
  position: sticky;
  top: 0;
}
#contacts > div > div > div > div.card-footer {
  position: sticky;
  bottom: -5px;
  background-color: #242428;
}
html:not(.dark) #contacts > div > div > div > div.card-footer {
  background-color: white;
}
#contacts > div > div > div > div.card-text {
  padding-bottom: 20px;
}

